third_party/move/move-compiler-v2/tests/more-v1/expansion/unpack_assign_other_expr.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/unpack_assign_other_expr.move:9:11
  │
9 │         S f = S { f: 0 };
  │           ^
  │           │
  │           Unexpected 'f'
  │           Expected ';'
